cabal-version:      2.4
name:               monkey-hs
version:            0.1.0
synopsis: Interpreter for the Monkey lang from Writing an Interpreter in Go
author:             Isaac Van Doren
maintainer:         69181572+isaacvando@users.noreply.github.com

common shared
    default-language: Haskell2010
    build-depends:    base ^>=4.16.4.0, raw-strings-qq, hspec
    default-extensions: NamedFieldPuns, QuasiQuotes
    ghc-options: -Wall

library lexer
    import: shared
    exposed-modules: Lexer

executable monkey-hs
    import: shared
    main-is: Main.hs

test-suite spec
    import: shared
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends: hspec >= 2.7, hspec-discover >= 2.7